# Ray-Tracer-RTX

./: .clang-format  CMakeLists.txt  Makefile  README.md  junk.cpp
Linear_Algebra/: Matrix3D.cpp  Matrix3D.h  Vector3D.cpp  Vector3D.h  linearAlgebraFunctions.cpp  linearAlgebraFunctions.h
Misc/: miscFunctions.cpp  miscFunctions.h
Objects/: Camera.cpp  Camera.h  Light.cpp  Light.h  Primitive.cpp  Primitive.h  Scene.cpp  Scene.h  derivedObjects.cpp  derivedObjects.h
Output/: render copy.ppm
Ray-Tracing/: RayTracingFunctions.cpp  RayTracingFunctions.h
Source_Code/: AnimationMain.cpp  main.cpp
